--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "react-bootstrap": "^2.10.9",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^3.0.1",
     "web-vitals": "^2.1.0",
     "xlsx": "^0.18.5"
   },
